--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,10 +1,15 @@
 ############ Configurations ###################
-app.baseurl=http://18.116.88.132:8080/bank/login
-app.browser=chrome
-##app.browser=edge
+app.baseurl = http://18.116.88.132:8080/bank/login
+app.browser = chrome
+##app.browser = edge
 
 
 ########## Login Info ####################
-valid.username=LoloPolo123@gmail.com
-valid.password=LoloPolo123
+
+valid.username = LoloPolo123@gmail.com
+valid.password = LoloPolo123
+
+########## InvalidLogin Info ####################
+invalid.username = 999LoloPolo123@gmail.com
+invalid.password = 999LoloPolo123
 
