--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,6 +2,20 @@
 app.baseurl = http://18.116.88.132:8080/bank/login
 app.browser = chrome
 ##app.browser = edge
+app.host = localhost
+//app.host = saucelabs
+
+########## Sauce Labs Info ##############
+
+sauce.urlWest = https://ondemand.us-west-1.saucelabs.com/wd/hub
+
+sauce.username = oauth-lucekdj-b12c0
+sauce.accessKey = 28ec908c-f754-412d-af82-63ded25793f9
+sauce.browserName = chrome
+sauce.browserVersion = 109.0
+sauce.platformName = Windows 10
+
+
 
 
 ########## Login Info ####################
@@ -13,3 +27,7 @@ valid.password = LoloPolo123
 invalid.username = 999LoloPolo123@gmail.com
 invalid.password = 999LoloPolo123
 
+
+########## New Saving Acc ####################
+
+deposit.amount = 1000
