Feb 21  FancyTest in ReportFolder

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -30,4 +30,8 @@ invalid.password = 999LoloPolo123
 
 ########## New Saving Acc ####################
 
-deposit.amount = 1000
+
+saving.accName = LoloPoloVacation!!
+saving.accType = Savingsl
+saving.accOwnership = Jointk
+saving.accDepositBalance = 29010
