Feb 22  Fix and add assortion to Baiat homewory view saving acc

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -32,6 +32,6 @@ invalid.password = 999LoloPolo123
 
 
 saving.accName = LoloPoloVacation!!
-saving.accType = Savingsl
-saving.accOwnership = Jointk
-saving.accDepositBalance = 29010
+saving.accType = Savings
+saving.accOwnership = Joint
+saving.accDepositBalance = 2901
