Feb 28  Shyam first day framework -DatabaseUtils,hooks

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -15,9 +15,6 @@ sauce.browserName = chrome
 sauce.browserVersion = 109.0
 sauce.platformName = Windows 10
 
-
-
-
 ########## Login Info ####################
 
 valid.username = LoloPolo123@gmail.com
@@ -35,3 +32,37 @@ saving.accName = LoloPoloVacation!!
 saving.accType = Savings
 saving.accOwnership = Joint
 saving.accDepositBalance = 2901
+
+##########  Local DataBase Info ####################
+
+db.url = jdbc:mysql://localhost:3306/bootcamp
+db.userName = root
+db.password = Sozero343!
+
+########### Transfer Info ######################
+transfer.from.account  = alex (Standard Checking)
+transfer.to.account = Shyam (Standard Checking)
+transfer.amount = 30.00
+
+
+
+
+
+
+############# Shyam
+
+######### Login Info #########
+valid.username3 = test@tester.com
+valid.password3 = Tester123
+
+######### Database Info #########
+
+db.url3=jdbc:mysql://18.116.88.132:3306/digitalbank
+db.userName3=root
+db.password3=Demo123!
+
+
+######### Transfer Info #########
+transfer.from.account3=Cash (Standard Checking)
+transfer.to.account3=Bond (Standard Checking)
+transfer.amount3=20.00
