--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+
 
     </dependencies>
     <build>
