Feb 28  Shyam first day framework -DatabaseUtils,hooks

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -35,3 +35,9 @@ saving.accName = LoloPoloVacation!!
 saving.accType = Savings
 saving.accOwnership = Joint
 saving.accDepositBalance = 2901
+
+########## DataBase Info ####################
+
+db.url = jdbc:mysql://localhost:3306/bootcamp
+db.userName = root
+db.password = Sozero343!
