4/25/2023 added Baiat's chrome option to utilities, chrome works not Edge

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,13 +1,15 @@
 ############ Configurations ###################
-app.baseurl = http://18.116.88.132:8080/bank/login
+app.baseurl = http://18.118.14.155:8080/bank/login
+//app.baseurl = https://www.ebay.com/
 app.browser = chrome
-##app.browser = edge
+//app.browser = edge
 app.host = localhost
 //app.host = saucelabs
 
 ########## Sauce Labs Info ##############
 
 sauce.urlWest = https://ondemand.us-west-1.saucelabs.com/wd/hub
+
 
 sauce.username = oauth-lucekdj-b12c0
 sauce.accessKey = 28ec908c-f754-412d-af82-63ded25793f9
